@@ -1,3 +1,4 @@
 usr/bin
 usr/share/doc
 usr/share/man/man1
+etc/bash_completion.d
