@@ -1,4 +1,5 @@
-debian/@UNISON_GTK_PACKAGE@.xpm     /usr/share/pixmaps/
-debian/@UNISON_GTK_PACKAGE@.svg     /usr/share/pixmaps/
-@UNISON_GTK@                        /usr/bin/
-debian/@UNISON_GTK_PACKAGE@.desktop /usr/share/applications/
+debian/@UNISON_GTK_PACKAGE@.xpm             /usr/share/pixmaps/
+debian/@UNISON_GTK_PACKAGE@.svg             /usr/share/pixmaps/
+@UNISON_GTK@                                /usr/bin/
+debian/@UNISON_GTK_PACKAGE@.desktop         /usr/share/applications/
+debian/@UNISON_GTK_PACKAGE@.completion.bash /etc/bash_completion.d/@UNISON_GTK_PACKAGE@
