@@ -1,2 +1,3 @@
 usr/bin
 usr/share/man/man1
+etc/bash_completion.d
