@@ -1,1 +1,2 @@
-@UNISON@   /usr/bin/
+@UNISON@                                 /usr/bin/
+debian/@UNISON_PACKAGE@.completion.bash  /etc/bash_completion.d/@UNISON_PACKAGE@
